[package]
name = "mlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
csv = "1.2.2"
petgraph = "0.6.3"
serde = { version = "1.0.171", features = ["derive"] }
color-eyre = "0.5"
log = "0.4.20"

[profile.release]
debug = true
